<resources>
    <string name="app_name">MoneyFlow</string>
    <string name="img_title_description">Barra de título</string>
    <string name="txt_title_money_flow">Money Flow</string>
    <string name="txt_title">Título</string>
    <string name="btn_menu_access">Acessar menu</string>
    <string name="btn_profile_access">Acessar perfil</string>
    <string name="txt_search_hint_goal">Digite o título da meta</string>
    <string name="txt_search_hint_statement">Buscar no extrato</string>
    <string name="txt_goal_value_example_1">R$ 5.000,00</string>
    <string name="txt_goal_description_example_1">Viagem de Final de ano</string>
    <string name="txt_goal_date_example_1">31/12/2025</string>
    <string name="txt_goal_value_example_2">R$ 2.500,00</string>
    <string name="txt_goal_description_example_2">Teto de gastos mensal</string>
    <string name="txt_goal_date_example_2">31/05/2025</string>
    <string name="btn_add_goal_hint">Adicionar Meta</string>
    <string name="txt_goal_title">Metas</string>
    <string name="img_search_icon_description">Ícone de busca</string>
    <string name="txt_description_hint">Descrição</string>
    <string name="txt_value_hint">Valor</string>
    <string name="txt_start_date_hint">Data de início</string>
    <string name="txt_date">Data</string>
    <string name="txt_deadline_hint">Prazo</string>
    <string name="rb_income">RECEITA</string>
    <string name="rb_expense">DESPESA</string>
    <string name="btn_save">GRAVAR</string>
    <string name="txt_progress_value_example">R$ 2.481,00</string>
    <string name="txt_value">Valor:</string>
    <string name="txt_deadline">Prazo:</string>
    <string name="txt_deadline_example">31/12/2025</string>
    <string name="txt_days_remaining">Dias Restantes:</string>
    <string name="txt_days_remaining_example">152</string>
    <string name="btn_edit">EDITAR</string>
    <string name="txt_dynamic_title_goal">METAS</string>
    <string name="formatted_value">%1$s</string>
    <string name="days_remaining_format">%1$d dias restantes</string>
    <string name="expired_deadline">Prazo expirado</string>
    <string name="progress_format">Progresso: %d%%</string>
    <string name="valor_indefinido">Valor indefinido</string>
    <string name="data_indefinida">Data não informada</string>
    <string name="descricao_indefinida">Descrição não informada</string>
    <string name="txt_goal_created">Metas criadas</string>
    <string name="btn_excluir">EXCLUIR</string>
    <string name="btn_delete">DELETAR</string>
    <string name="expired_days_format">Expirou há %1$d dias</string>
    <string name="meta_expirada">Meta expirada</string>
    <string name="erro_calculo_progresso">Erro no cálculo do progresso</string>
    <string name="txt_accumulated_value_example">Total acumulado: R$ 0,00</string>
    <string name="accumulated_value_format">Total acumulado: %s</string>
    <string name="txt_remaining_value_example">Restante necessário: R$ 0,00</string>
    <string name="remaining_value_format">Restante necessário: %s</string>
    <string name="txt_status">Status da Meta</string>
    <string name="txt_achieved_goal">Meta Atingida 🎉</string>
    <string name="txt_expired_goal">Meta Expirada ⌛</string>
    <string name="no_progress_due_to_expiration">Prazo encerrado, sem progresso registrado</string>


</resources>