<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/goal_viewer"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingVertical="8dp">

            <TextView
                android:id="@+id/txt_goal_title"
                style="@style/DefaultLabel"
                android:text="@string/txt_goal_description_example_1"
                android:textAlignment="center" />

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/progress_goal"
                style="@style/Widget.MaterialComponents.CircularProgressIndicator"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="16dp"
                android:progress="49"
                android:indeterminate="false"
                app:indicatorColor="@color/material_dynamic_primary70"
                app:indicatorInset="16dp"
                app:indicatorSize="128dp"
                app:trackColor="@color/material_dynamic_tertiary70"
                app:trackCornerRadius="16dp"
                app:trackThickness="6dp" />

            <TextView
                android:id="@+id/txt_progress_value"
                android:layout_marginTop="8dp"
                android:text="@string/txt_progress_value_example"
                android:textSize="16sp"
                style="@style/DefaultLabel" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <TextView
                    style="@style/DefaultLabel"
                    android:layout_marginTop="8dp"
                    android:text="@string/txt_value" />

                <TextView
                    android:id="@+id/txt_goal_value"
                    style="@style/DefaultLabel"
                    android:text="@string/txt_goal_value_example_1" />

                <TextView
                    style="@style/DefaultLabel"
                    android:layout_marginTop="8dp"
                    android:text="@string/txt_deadline" />

                <TextView
                    android:id="@+id/txt_goal_deadline"
                    style="@style/DefaultLabel"
                    android:text="@string/txt_deadline_example" />

                <TextView
                    style="@style/DefaultLabel"
                    android:layout_marginTop="8dp"
                    android:text="@string/txt_days_remaining" />

                <TextView
                    android:id="@+id/txt_goal_days_remaining"
                    style="@style/DefaultLabel"
                    android:text="@string/txt_days_remaining_example" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_edit_goal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginHorizontal="32dp"
                android:backgroundTint="@color/material_dynamic_neutral70"
                android:fontFamily="sans-serif-medium"
                android:text="@string/btn_edit"
                android:textAllCaps="true"
                android:textColor="@android:color/black" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
