<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/goal_list">

    <include
        layout="@layout/top_bar"
        android:id="@+id/top_bar_metas" />

    <LinearLayout
        android:id="@+id/search_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal"
        android:background="@drawable/search_background"
        android:padding="4dp"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@id/top_bar_metas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/icon_search"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="8dp"
            android:src="@drawable/ic_search"
            android:contentDescription="@string/img_search_icon_description"
            app:tint="@color/EditTextFonte" />

        <EditText
            android:id="@+id/edt_search_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:hint="@string/txt_search_hint_goal"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="12dp"
            android:textColor="@color/EditTextFonte"
            android:textColorHint="@color/material_dynamic_neutral40" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:contentDescription="@string/txt_goal_created"
        app:layout_constraintTop_toBottomOf="@id/search_input_layout"
        app:layout_constraintBottom_toTopOf="@+id/btn_add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:id="@+id/goals_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/btn_add_goal_hint"
        android:src="@drawable/ic_add"
        app:backgroundTint="@color/material_dynamic_neutral60"
        app:tint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
