<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Conteúdo principal -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Top bar -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/top_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imagem_topbar"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:contentDescription="@string/img_title_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@color/material_dynamic_neutral70" />

            <!-- Botão menu - ESQUERDA -->
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btn_esquerda"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:clickable="true"
                android:contentDescription="@string/btn_menu_access"
                android:focusable="true"
                app:backgroundTint="@color/material_dynamic_neutral70"
                app:elevation="0dp"
                app:fabCustomSize="50dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:maxImageSize="32dp"
                app:srcCompat="@drawable/baseline_menu_60"
                app:tint="@color/black" />

            <!-- Título central -->
            <TextView
                android:id="@+id/txt_titulo"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/txt_title_money_flow"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintStart_toEndOf="@+id/btn_esquerda"
                app:layout_constraintEnd_toStartOf="@+id/btn_direita"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Botão perfil - DIREITA -->
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btn_direita"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:clickable="true"
                android:contentDescription="@string/btn_profile_access"
                android:focusable="true"
                app:backgroundTint="@color/material_dynamic_neutral70"
                app:elevation="0dp"
                app:fabCustomSize="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:maxImageSize="32dp"
                app:srcCompat="@drawable/baseline_account_circle_24"
                app:tint="@color/black" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Aqui recebe o layout da activity que vai abrir a tela -->
        <FrameLayout
            android:id="@+id/content_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <!-- Menu lateral -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/menu_lateral" />
</androidx.drawerlayout.widget.DrawerLayout>
